--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -60,19 +60,19 @@ Se requiere de Android Auto 5.8 o superior.</string>
     <string name="re_enable_tweak_string">Reactivar\u0020</string>
     <string name="copy_log">Copiar registro</string>
     <string name="about">Acerca de</string>
-    <string name="revert_everything">Revertir todo</string>
+    <string name="revert_everything">Resetear todo</string>
     <string name="force_disable_tweak">Forzar desactivado\u0020</string>
     <string name="reset_tweak">Reiniciar\u0020</string>
-    <string name="force_widescreen_warning">Forzar pantalla extendida ha sido desactivada automáticamente</string>
-    <string name="force_disable_widescreen_warning">Forzar desactivar pantalla extendida se ha desactivado automáticamente</string>
+    <string name="force_widescreen_warning">Forzar desactivación automática de modo pantalla completa</string>
+    <string name="force_disable_widescreen_warning">Forzar desactivación automática de modo desactivar pantalla completa</string>
     <string name="set_value">Establecer\u0020</string>
     <string name="reboot_to_apply">REINICIAR PARA APLICAR</string>
     <string name="warning_title">ADVERTENCIA</string>
-    <string name="unpatch">Unpatch\u0020</string>
+    <string name="unpatch">Desparchear\u0020</string>
     <string name="patch_app">Parchear\u0020</string>
     <string name="default_string">\u0020Por defecto</string>
-    <string name="app_list_label">Apps List</string>
-    <string name="translators_button">Translated by</string>
+    <string name="app_list_label">Lista de Aplicaciones</string>
+    <string name="translators_button">Traducido por</string>
     <string name="about_part_one"><![CDATA[AA AIO TWEAKER está desarrollado y mantenido por Shmykelsa.<br><br>El código fuente está disponible en <a href=\"https://github.com/shmykelsa/AA-Tweaker\">GitHub</a><br><br>]]></string>
     <string name="about_part_two"><![CDATA[Si realmente te gusta mi trabajo, por favor considera realizar una donación.<br> Puedes donar a través de <a href=\"http://www.paypal.me/grizzo96\">PayPal</a> o puedes copiar mi dirección de Bitcoin con el botón de abajo.<br><br>Aunque sea sólo una pequeña cantidad será muy apreciada :)]]></string>
     <string name="copied_address_toast">Dirección BTC copiada al portapapeles</string>
@@ -88,7 +88,7 @@ ADVERTENCIA: Esta modificación no ha sido probada extensivamente y podría pote
     <string name="negative_button">Cancelar</string>
     <string name="added_app_action">"Añadido: "</string>
     <string name="removed_app_action">Eliminado\u0020</string>
-    <string name="root_access_warning">Acceso root denegado. Por favor permita el acceso root.</string>
+    <string name="root_access_warning">Acceso root denegado. Por favor autoriza el acceso root.</string>
     <string name="revert_everything_dialog">¿Quieres revertir todo? Por favor reinicia manualmente la aplicación después de hacerlo</string>
     <string name="calendar_tweak">Definir %1$s días visibles en el calendario</string>
     <string name="calendar_tweak_single">Definir %1$s día visible en el calendario</string>
@@ -112,28 +112,33 @@ ADVERTENCIA: Esta modificación no ha sido probada extensivamente y podría pote
     <string name="alpha_jump_tweak">Nuevo salto alfabético</string>
     <string name="choose_accounts">Elige cuenta</string>
     <string name="use_all">Usar todo (EXPERIMENTAL)</string>
-    <string name="copied_pastebin">Ein Link zum Protokoll wurde erstellt und in die Zwischenablage kopiert</string>
-    <string name="log_copied">Dnevnik aktivnosti je bil kopiran</string>
+    <string name="copied_pastebin">Un enlace al registro ha sido creado y copiado al portapapeles</string>
+    <string name="log_copied">El registro ha sido copiado</string>
     <string name="new_version_available">Nueva versión disponible</string>
     <string name="go_to_new_version">Una nueva versión de AAAD (versión %1$s) está disponible en GitHub. ¿Quieres descargarla ahora?</string>
     <string name="go_to_download">Ir a descargas</string>
-    <string name="ignore_for_now">Ninguno por ahora</string>
-    <string name="many_accounts_warning">AA AIO TWEAKER found a large number (%1$s) of Google accounts saved in the device.\nThis can negatively impact on the success of the patching process and AA AIO TWEAKER might fail.\nYou can either choose the account(s) that you mostly use with Google Play Services to apply the patch to just them (2 or less is recommended) or activate an experimental mode that should patch all accounts.\nPLEASE NOTE that the experimental mode might cause some crashes to the phone while the patch is running.</string>
-    <string name="dark_switch_tweak">opción diurno/noche</string>
-    <string name="tutorial_darkmodeswitch">This tweak will activate a dedicated toggle in Android Auto generic settings (both car and phone) that can control the status of day/night mode on Android Auto. This option is different from the one in developer settings because it doesn\'t need a restart of Android Auto and it will actually have effect on the usage after Google enabling the independent dark mode. Android Auto 6.3 or superior is required.</string>
-    <string name="remove_paired_car">Remove a paired car</string>
-    <string name="choose_cars">Choose car(s)</string>
-    <string name="tutorial_carremover">Did you know that you can only remove all the paired cars from Android Auto and you cannot remove just one at a time? This option will rescue you if you want to delete a car from Android Auto, just select which car(s) you want and it/they will be removed.</string>
+    <string name="ignore_for_now">Ignorar por ahora</string>
+    <string name="many_accounts_warning">AA AIO DWEAKER encontró un gran número (%1$s) de cuentas de Google guardadas en el dispositivo.\nEsto puede afectar negativamente al éxito del proceso de parcheo y AA AIO TWEAKER podría fallar.\nPuede elegir la cuenta(s) que utiliza principalmente con los Servicios de Google Play para aplicar el parche a sólo ellos (se recomienda 2 o menos) o activar un modo experimental que debería parchear todas las cuentas.\nPOR FAVOR TEN EN CUENTA que el modo experimental podría causar algun bloqueo en el teléfono mientras se ejecuta el parche.</string>
+    <string name="dark_switch_tweak">opción día/noche</string>
+    <string name="tutorial_darkmodeswitch">Este ajuste activará un interruptor dedicado en la configuración genérica de Android Auto (tanto el automóvil como en el teléfono) que puede controlar el estado del modo día/noche en Android Auto. Esta opción es diferente de la de la configuración de desarrollador porque no se necesita reiniciar Android Auto y tendrá efecto después de que Google habilite el modo oscuro independiente. Android Auto 6.3 o superior es necesario.</string>
+    <string name="remove_paired_car">Eliminar un coche emparejado</string>
+    <string name="choose_cars">Elegir coche(s)</string>
+    <string name="tutorial_carremover">¿Sabías que sólo se pueden quitar los coches emparejados en Android Auto todos a la vez, y no de uno en uno? Esta opción te rescatará si quieres eliminar coches individuales en Android Auto; sólo tienes que seleccionar el(los) coche(s) que deseas y se eliminará(n).</string>
     <string name="custom_startup_option">Opción de inicio personalizada</string>
     <string name="tutorial_custom_startup_option">Esta modificación activará una nueva opción dentro de la configuración de Android Auto que permitirá al usuario establecer qué abrir cuando Android Auto se inicia. Puedes elegir entre abrir la última aplicación de navegación, la última aplicación de música, o simplemente el lanzador. Se requiere Android Auto 6.8 o superior.</string>
     <string name="custom_hotseat_option">Opción de asientos personalizada</string>
     <string name="tutorial_hotseat_option">Esta modificación activará una nueva opción dentro de los ajustes de Android Auto que permitirá al usuario decidir si la posición del asiento del conductor está a la izquierda o la derecha, para que Android Auto pueda adaptar así su interfaz de usuario. Android Auto 6.9 o superior es necesario.</string>
-    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Codewalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
+    <string name="tutorial_coolwalk">Esta modificación activará un nuevo diseño en Android Auto (con nombre en clave Coolwalk), que se puede activar en la configuración de Android Auto, y que ajusta ligeramente la apariencia en pantallas más pequeñas. Este diseño presenta un panel lateral siempre visible y con apariencia gráfica diferente. Esta característica está en su fase inicial de momento. Se requiere Android Auto 6.9 o superior.</string>
     <string name="coolwalk_tweak">Diseño Coolwalk</string>
-    <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
-    <string name="focus_tweak">Focus settings</string>
-    <string name="casting_app">Casting app</string>
-    <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
-    <string name="decline_message_tweak">Decline with message</string>
-    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with pre-made SMS.</string>
+    <string name="tutorial_focus_settings">Este ajuste activará una nueva opcion en los ajustes de Android Auto para personalizar manualmente si Android Auto debe ser ejecutado tan pronto como conectes tu teléfono al coche. Android Auto 6.8 o superior es necesario.</string>
+    <string name="focus_tweak">Ajustes de concentración</string>
+    <string name="casting_app">Aplicación para transmisión de contenido multimedia</string>
+    <string name="tutorial_mirroring_app">Esta misteriosa aplicación ha sido incluida a partir de Android Auto 7.1, y se supone que es una aplicación de proyección de pantalla, probablemente destinada al uso en Android Auto por parte de pasajeros acompañantes. Podría no funcionar correctamente.</string>
+    <string name="decline_message_tweak">Rechazar con un mensaje</string>
+    <string name="tutorial_decline_message">Este ajuste permitirá la posibilidad de rechazar una llamada entrante mediante SMS (con Google Assistant).</string>
+    <string name="section_one">Ajustes generales</string>
+    <string name="section_two">Ajustes de la pantalla</string>
+    <string name="section_three">Ajustes de apariencia</string>
+    <string name="section_four">Ajustes de calidad de vídeo</string>
+    <string name="section_five">Pre-activar características</string>
 </resources>
