--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -126,12 +126,17 @@ WAARSCHUWING: Deze tweak is niet uitgebreid getest en kan Android Auto mogelijk 
     <string name="tutorial_custom_startup_option">Met deze tweak wordt een nieuwe optie ingeschakeld in de instellingen van Android Auto, waarmee de gebruiker kan instellen wat geopend moet worden wanneer Android Auto wordt gestart. U kunt de laatste gebruikte navigatie-app openen, de laatst gebruikte muziek app of het start menu. Android Auto 6.8 of hoger is vereist.</string>
     <string name="custom_hotseat_option">Zitplaats optie</string>
     <string name="tutorial_hotseat_option">Deze aanpassing activeert een nieuwe optie in de instellingen van Android Auto, die de gebruiker laat beslissen of de rijpositie links of rechts is, zodat Android Auto zijn UI kan aanpassen. Android Auto 6.9 of hoger is vereist.</string>
-    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Codewalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
+    <string name="tutorial_coolwalk">Deze tweak zal een nieuw ontwerp activeren in Android Auto (codename Coolwalk) dat kan worden ingeschakeld in Android Auto\'s instellingen en dat het uiterlijk een beetje verandert op kleinere schermen. Dit ontwerp bevat een \"altijd aan\"-zijpaneel en een aantal verschillende afbeeldingen. Deze functie is op dit moment in een beta-fase. Android Auto 6.9 of hoger is vereist.</string>
     <string name="coolwalk_tweak">Coolwalk ontwerp</string>
-    <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
-    <string name="focus_tweak">Focus settings</string>
+    <string name="tutorial_focus_settings">Deze tweak zal een nieuwe optie activeren in Android Auto instellingen om handmatig aan te passen hoe Android Auto moet worden gestart zodra u uw telefoon met de auto verbindt. Android Auto 6.8 of superieur is vereist.</string>
+    <string name="focus_tweak">Focus instellingen</string>
     <string name="casting_app">Casting app</string>
-    <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
-    <string name="decline_message_tweak">Decline with message</string>
-    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with pre-made SMS.</string>
+    <string name="tutorial_mirroring_app">Deze mysterieuze app is gebundeld vanaf Android Auto 7.1 en het veronderstelt een app voor mirroring op het scherm, waarschijnlijk bestemd voor Android Auto van de passagier. Kan mogelijk niet goed werken.</string>
+    <string name="decline_message_tweak">Weigeren met bericht</string>
+    <string name="tutorial_decline_message">Met deze tweak wordt de mogelijkheid ingeschakeld om een inkomende oproep te weigeren met SMS (met Google Assistant).</string>
+    <string name="section_one">Algemene aanpassingen</string>
+    <string name="section_two">Scherm instellingen tweaks</string>
+    <string name="section_three">Uiterlijk aanpassingen</string>
+    <string name="section_four">Videokwaliteitsinstellingen</string>
+    <string name="section_five">Functies vooraf activeren</string>
 </resources>
