--- a/app/src/main/res/values-sl-rSI/strings.xml
+++ b/app/src/main/res/values-sl-rSI/strings.xml
@@ -128,12 +128,17 @@ OPOZORILO: Popravka ni še bilo mogoče obširno testirati, zato lahko pride do 
     <string name="tutorial_custom_startup_option">Popravek aktivira novo možnost v nastavitvah Android Auto, katera dopusti uporabniku, da sam nastavi katero aplikacijo odpreti ob zagonu. Izberete lahko najnovejšo navigacijo, glasbeni predvajalnik, ali preprosto zaganjalnik. Potrebno je posodobiti Android Auto na verzijo 6.8 ali kasnejšo.</string>
     <string name="custom_hotseat_option">Možnosti prilagajanja sedeža</string>
     <string name="tutorial_hotseat_option">Popravek bo omogočil novo možnost v nastavitvah Android Auto, ki omogoči uporabniku, da izbere ali je voznikov sedež na levi ali desni strani vozila. Na ta način Android Auto lahko boljše prilagodi uporabniški vmesnik (UI). Potrebna verzija Android Auto 6.9 ali višja.</string>
-    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Codewalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
+    <string name="tutorial_coolwalk">This tweak will activate a new design in Android Auto (codename Coolwalk) that can be toggled in Android Auto\'s settings and that tweaks a bit the appearance on smaller screens. This design features a always on side panel and some different graphics. This feature is in early stage at the moment. Android Auto 6.9 or superior is required.</string>
     <string name="coolwalk_tweak">Coolwalk design</string>
     <string name="tutorial_focus_settings">This tweak will activate a new options in Android Auto settings to manually customize whether Android Auto must be launched as soon as you connect your phone with the car. Android Auto 6.8 or superior is required.</string>
     <string name="focus_tweak">Focus settings</string>
     <string name="casting_app">Casting app</string>
     <string name="tutorial_mirroring_app">This mysterious app is bundled starting from Android Auto 7.1 and it\'s supposedly a screen mirroring app, probably destined to passenger\'s Android Auto. Might not function properly.</string>
     <string name="decline_message_tweak">Decline with message</string>
-    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with pre-made SMS.</string>
+    <string name="tutorial_decline_message">This tweak will enable the possibility to decline an incoming call with SMS (with Google Assistant).</string>
+    <string name="section_one">General tweaks</string>
+    <string name="section_two">Screen setup tweaks</string>
+    <string name="section_three">Appeareance tweaks</string>
+    <string name="section_four">Video quality settings</string>
+    <string name="section_five">Pre-activate features</string>
 </resources>
